@@ -17,6 +17,13 @@ They should work with most recent kernels. Man pages are included.
 src/loop.h was stolen from util-linux package which in turn stole it from
 the Linux kernel.
 
+fuser on network fs
+-------------------
+On network filesystems, fuser can hang because its trying to stat files
+that may go away.  If you use the --with-timeout-stat option during
+the configure step then fuser will fork a process to run stat. This means
+fuser doesn't hang, but it is much slower.
+
 Translations
 ------------
 My thanks for the various translators who have cheerfully given me the po
